# DQOPS_API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GETTING_STARTED.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
docs/: DQOPS_FEATURES.md  DQOPS_IMPLEMENTATION.md  api-spec.md  architecture.md  database-schema.md  deterministic-engine-expansion.md  differentiators.md  features.md
scripts/: update_test_data.sql
src/dq_platform/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_api_checks_old.py  test_api_checks_routes.py  test_api_connections.py  test_api_incidents.py  test_api_notifications.py  test_api_schedules.py  test_check_runner_error_propagation.py  test_check_service_validation.py  test_checks.py  test_dimension_mapping.py  test_dimension_scoring.py  test_dqops_checks.py  test_error_handlers.py  test_health.py  test_profile_routes.py  test_rules_humanize.py  test_scheduler_and_notifications.py  test_security.py  test_sensor_contract.py  test_sensor_rendering.py  test_sensor_required_params.py  test_service_check.py  test_service_connection.py  test_service_execution.py  test_service_incident.py  test_service_schedule.py
tests/connectors/: test_sql_dialects.py
tests/fixtures/: setup_test_data.sql  threshold_cases.json
tests/integration/: __init__.py  conftest.py  test_api_checks.py  test_connectors_and_anomaly.py
tests/profilers/: test_check_emitter.py  (+2 more)
(+113 files in other folders)
